# movie_analytics

./: .env  .env.example  .gitignore  LICENSE  README.md  app.ipynb  app.py  database.py  genre_ratings_df.csv  genre_roi_df.csv  main.py  pyproject.toml
.streamlit/: config.toml  secrets.toml
notebooks/: data_analysis.ipynb  genre_ratings_df.csv
scripts/: api.py  data_source.py  download_title_basics.py  download_title_ratings.py  download_tmdb_data.py  run_sql.py
sql/: movies_full_dataset.sql  title_basics_cleaned.sql  title_ratings_cleaned.sql  tmdb_movies_cleaned.sql
src/movie_analytics/: data_analysis.py  database.py  download_title_basics.py  download_title_ratings.py  download_tmdb_data.py  run_sql.py
