[project]
name = "movie_analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "Tarak Gupta Drebes",email = "tarak.guptadrebes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "kagglehub (>=1.0.1,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
